Fix some styling issues, including the bar being too tall on Stack Overflow

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -9,6 +9,8 @@
   margin      : 0;
   max-height  : auto;
   max-width   : auto;
+  min-height  : auto;
+  min-width   : auto;
   padding     : 0;
   text-shadow : none;
   width       : auto;
